# PolyKineticAnalyzer

./: README.md  polyKineticAnalyzer.py  pyproject.toml  requirements.txt
CTkXYFrame/: ctk_xyframe.py
app/: app.py  app_2.py  app_light.py  app_prototype.py  base_frames.py  calculations.py  calculations_arrays.py  commands.py  explanation_taker.py  fonts.py  fridman_calc.py  fridman_calculations.py  fridman_calculations_array.py  functions.py  instraction.py  instruction.py  main.py  output_app.py  parser.py  parser_pack.py  plots.py  polyKineticAnalyzer.py  table.py  teamplates.py  tests.py  texts.py
app/data/: PBS_10Kmin.txt  PBS_15Kmin.txt  PBS_5Kmin.txt
app/data/pbs/: PBS_10Kmin.txt  PBS_15Kmin.txt  PBS_17Kmin.txt  PBS_20Kmin.txt  PBS_3Kmin.txt  PBS_5Kmin.txt
app/data/peg/: PEG_10Kmin.txt  PEG_15Kmin.txt  PEG_17Kmin.txt  PEG_20Kmin.txt  PEG_3Kmin.txt  PEG_5Kmin.txt
app/src/: fridman_calculations_array.py  output_app.py
app/utils/: plots.py  table.py
data/: PBS_17Kmin.txt  PBS_20Kmin.txt  PBS_3Kmin.txt
src/: calculations_arrays.py  output_app.py  parser_pack.py
utils/: error_text_maker.py  explanation_taker.py  texts.py
