[tool.poetry]
name = "polykineticanalyzer"
version = "0.1.0"
description = ""
authors = ["djzhendogg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
regex = "^2023.12.25"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
